# flightops-de-pipeline

./: .gitignore  README.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
athena/: q01_region_kpi.sql  q02_top_corridors.sql  q03_speed_outliers.sql
data/raw/: states_20260111_165002_de.json  states_20260111_165411_de.json
data/reports/: kpi_latest.json
data/silver/: silver_20260111_165002_de.parquet  silver_20260111_165411_de.parquet
scripts/: run_all.sh  run_scheduled.sh  upload_to_s3.sh
src/flightops/: build_silver.py  fetch_states.py  kpi_report.py  region_kpi_report.py
tests/: test_basic.py  test_dq_logic.py  test_kpi.py  test_kpi_module.py  test_project_structure.py  test_silver.py  test_smoke_imports.py
